--- a/github-profiles/style.css
+++ b/github-profiles/style.css
@@ -44,7 +44,7 @@ body {
 .user-form input {
   width: 100%;
   display: block;
-  background-color: #4c2885;
+  background-color: #1f1431;
   border: none;
   border-radius: 10px;
   color: #fff;
@@ -66,7 +66,7 @@ body {
 
 .card {
   max-width: 800px;
-  background-color: #4c2885;
+  background-color: #130e1a;
   border-radius: 20px;
   box-shadow: 0 5px 10px rgba(154, 160, 185, 0.05),
     0 15px 40px rgba(0, 0, 0, 0.1);
@@ -77,7 +77,7 @@ body {
 
 .avatar {
   border-radius: 50%;
-  border: 10px solid #2a2a72;
+  border: 10px solid #18182d;
   height: 150px;
   width: 150px;
 }
