--- a/image-carousel/style.css
+++ b/image-carousel/style.css
@@ -151,6 +151,15 @@ body{
 
 .button button:hover{
   background-color: #333;
-  
 }
 
+footer{
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translate(-50%, 0);
+  width: 100%;
+  text-align: center;
+  padding: 10px 0;
+  font-size: 14px;
+}
